<resources>
    <string name="app_name">KeyBooking</string>
    <string name="app_name_up">KEYBOOKING</string>

    <string name="registration">Регистрация</string>
    <string name="big_registration">РЕГИСТРАЦИЯ</string>
    <string name="login">Вход</string>
    <string name="big_login">ВХОД</string>

    <string name="input_login">Логин</string>
    <string name="input_password">Пароль</string>
    <string name="input_repeat_password">Повторите пароль</string>
    <string name="input_email">Почта</string>

    <string name="login_button">Войти</string>
    <string name="reg_button">Зарегистрироваться</string>

    <string name="login_error">Неверный логин или пароль.</string>
    <string name="password_eq_error">Пароли не совпадают.</string>

    <string name="your_requests">Ваши заявки</string>
    <string name="aud">Аудитория</string>
    <string name="week">неделя</string>
    <string name="note">Выберите аудиторию, чтобы посмотреть доступное время</string>
    <string name="aud_error">Такой аудитории не существует</string>


    <string name="S8E10">8:45–10:20</string>
    <string name="S10E12">10:35–12:10</string>
    <string name="S12E14">12:25–14:00</string>
    <string name="S14E16">14:45–16:20</string>
    <string name="S16E18">16:35–18:10</string>
    <string name="S18E20">18:25–20:00</string>
    <string name="S20E21">20:15–21:50</string>

    <string name="back_btn"><![CDATA[<]]></string>
    <string name="next_btn"><![CDATA[>]]></string>

    <string name="create_btn">Создать</string>

    <string name="student">Студент</string>
    <string name="teacher">Преподаватель</string>
    <string name="principal">Деканат</string>
    <string name="admin">Админ</string>

    <string name="edit">Редактирование профиля</string>
    <string name="save">Сохранить</string>

    <string name="request">ЗАЯВКА</string>

    <string name="request_return">Вернуть ключ в деканат</string>
    <string name="request_confirm">Подтвердить получение ключа</string>


</resources>