<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/start_back" />

    <ImageView
        android:layout_width="568dp"
        android:layout_height="663dp"
        android:src="@drawable/start_key"
        tools:layout_editor_absoluteX="-48dp"
        tools:layout_editor_absoluteY="247dp"
        tools:ignore="MissingConstraints"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:padding="@dimen/indent_standard">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_huge"
                android:layout_marginBottom="@dimen/margin_big">
                <ImageView
                    android:layout_width="57dp"
                    android:layout_height="63dp"
                    android:src="@drawable/logo_splash"
                    android:layout_marginEnd="@dimen/margin_horizontal"/>

                <TextView
                    style="@style/Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_up" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regButton"
                android:text="@string/registration"
                style="@style/Button.Primary"
                android:layout_marginBottom="@dimen/margin_button"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:text="@string/login"
                style="@style/Button.Secondary"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>