<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/indent_standard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.create.aud"
                android:text="@string/aud"
                android:layout_marginBottom="@dimen/margin_field"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/aud_form_field"
                    android:inputType="text"
                    android:textColor="@color/textDarkBlue"
                    android:textSize="@dimen/input_text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:elevation="@dimen/shadow_distance"
                    android:outlineSpotShadowColor="@color/black">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Text.create.week.title"
                        android:text="@string/week"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_week_previous"
                            android:text="@string/back_btn"
                            style="@style/Button.Week"/>
                        <TextView
                            android:id="@+id/dates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Text.create.week.date"
                            android:text="12.02.24 - 18.02.24"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_week_next"
                            android:text="@string/next_btn"
                            style="@style/Button.Week"/>
                    </LinearLayout>
                </LinearLayout>
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/back">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <include
                            android:id="@+id/mon"
                            layout="@layout/request_day"/>
                        <include
                            android:id="@+id/tue"
                            layout="@layout/request_day"/>
                        <include
                            android:id="@+id/wed"
                            layout="@layout/request_day"/>
                        <include
                            android:id="@+id/thu"
                            layout="@layout/request_day"/>
                        <include
                            android:id="@+id/fri"
                            layout="@layout/request_day"/>
                        <include
                            android:id="@+id/sat"
                            layout="@layout/request_day"/>
                        <include
                            android:id="@+id/sun"
                            layout="@layout/request_day"/>
                    </LinearLayout>
                </HorizontalScrollView>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/regButton"
                    android:layout_width="match_parent"
                    android:text="@string/create_btn"
                    android:fontFamily="@font/inter_bold"
                    style="@style/Button.Secondary"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/note_back"
                android:alpha="0">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.create.note"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_huge"/>
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>