<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_back"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/indent_standard">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            style="@style/Button.Back"
            android:layout_marginBottom="@dimen/margin_button"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_some_more_big">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/base_key"
                android:layout_marginBottom="@dimen/margin_some_more_big"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Title"
                android:text="@string/big_login"
                android:layout_marginBottom="@dimen/margin_some_more_big"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/margin_some_more_big">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_email"
                    android:layout_marginBottom="@dimen/input_margin"
                    style="@style/Text.casual"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="@dimen/mini_square_size"
                        android:layout_height="@dimen/mini_square_size"
                        android:background="@drawable/square"
                        android:gravity="center"
                        android:elevation="@dimen/shadow_distance"
                        android:outlineSpotShadowColor="@color/base_shadow">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/email"/>
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/form_field"
                            android:inputType="text"
                            android:textColor="@color/textDarkBlue"
                            android:textSize="@dimen/input_text"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/margin_some_more_big">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_password"
                    android:layout_marginBottom="@dimen/input_margin"
                    style="@style/Text.casual"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="@dimen/mini_square_size"
                        android:layout_height="@dimen/mini_square_size"
                        android:background="@drawable/square"
                        android:gravity="center"
                        android:elevation="@dimen/shadow_distance"
                        android:outlineSpotShadowColor="@color/base_shadow">

                        <ImageView
                            android:layout_width="31dp"
                            android:layout_height="42dp"
                            android:src="@drawable/password" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleDrawable="@drawable/eye">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textPassword"
                            android:textSize="@dimen/input_text"
                            app:passwordToggleEnabled="false"
                            android:background="@drawable/form_field"
                            android:textColor="@color/textDarkBlue" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:text="@string/login_button"
                style="@style/Button.Primary"
                android:layout_marginBottom="@dimen/margin_some_more_big"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regButton"
                android:layout_width="match_parent"
                android:text="@string/registration"
                style="@style/Button.Secondary"
                android:layout_marginBottom="@dimen/margin_some_more_big"/>
            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.casual"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>